fix formatting on login/sign up pages, add spacing for summary, docs and articles for #506

--- a/source/scss/_variables.scss
+++ b/source/scss/_variables.scss
@@ -1,6 +1,7 @@
 $black: #000000;
 $dark-green: #6c9020;
 $dark-grey: #444444;
+$med-grey: #7b7b7b;
 $font-stack: 100% Helvetica, sans-serif;
 $light-green: #b4cf7b;
 $green: #8aaf3e;
